# phone-number-validator

./: .gitignore  README.md  pyproject.toml  requirements.txt
phone_number_validator/: validator.py
tests/: test_validator.py
