[tool.poetry]
name = "phone-number-validator"
version = "1.0.0"
description = "Validate Phone Numbers using NumLookupAPI"
authors = ["Ashutosh Krishna <ashutoshbritish@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ashutoshkrris/phone-number-validator"
packages = [{include = "phone_number_validator"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
